# chain-fusion-starter

./: .gitignore  Caddyfile  Cargo.toml  LICENSE  README.md  canister_ids.json  deploy.sh  deploy_canister_to_production.sh  dfx.json  foundry.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: buildAndDeploy.yml  foundry.yml  rust.yml
canisters/chain_fusion/: Cargo.toml  chain_fusion.did
canisters/chain_fusion/src/: eth_call.rs  eth_get_logs.rs  eth_send_raw_transaction.rs  evm_signer.rs  execute_job.rs  fees.rs  init.rs  job.rs  lib.rs  lifecycle.rs  logs.rs  state.rs
canisters/chain_fusion/src/job/: submit_result.rs
contracts/: Coprocessor.sol  ERC20MintableByAnyone.sol  RecurringTransactions.sol
docs/: competition.md
script/: Coprocessor.s.sol  DeployContract.s.sol  DeployContract.sol  DeployEnvironment.s.sol  NFT.s.sol  createJob.s.sol
src/chain_fusion_backend/: Cargo.toml  chain_fusion_backend.did
src/chain_fusion_backend/src/: eth_get_logs.rs  eth_logs.rs  eth_send_raw_transaction.rs  evm_rpc.rs  evm_signer.rs  execution_timer.rs  fees.rs  job.rs  lib.rs  lifecycle.rs  state.rs  timer.rs  transactions.rs
src/chain_fusion_backend/src/job/: calculate_result.rs  generators.rs  submit_result.rs
src/chainfusion_backend/: Cargo.toml
src/chainfusion_backend/src/: guard.rs  job.rs  lib.rs  lifecycle.rs  state.rs
src/chainfusion_backend/src/job/: distribution.rs  generators.rs  submit_result.rs
src/dappcon_backend/: Cargo.toml  dappcon_backend.did
src/dappcon_backend/src/: eth_logs.rs  evm_rpc.rs  evm_signer.rs  fees.rs  job.rs  lib.rs  lifecycle.rs  logs.rs  state.rs  storage.rs  transaction.rs  transactions.rs  utils.rs
src/foundry/: Coprocessor.sol  NFT.sol  RecurringTransactions.sol
src/foundry/scripts/: start.s.sol
test/: RecurringTransactions.t.sol
webapp/: LICENSE  README.md  config-overrides.js  package.json  pnpm-lock.yaml
webapp/public/: index.html  manifest.json
webapp/src/: index.css  index.tsx  polyfills.ts
webapp/src/components/: App.tsx  CreateRecurringTransaction.tsx  Docker.tsx  Info.tsx  ShowRecurringTransactions.tsx  StopRecurringTransaction.tsx  Welcome.tsx
webapp/src/contracts/: EurE_v1.2.2.json  README  RecurringTransactions.json
webapp/src/hooks/: useConfiguration.tsx
webapp/src/utils/: configurationTemplate.ts  configureEnv.ts  constants.ts  ensUtils.ts  resolverAbi.ts
