[package]
name = "chain_fusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ethers-core = "2.0.14"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4.3"
ic-canisters-http-types = { git="https://github.com/dfinity/ic"}
ic-cdk.workspace = true
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.4"
minicbor = { version = "0.24.0", features = ["alloc", "derive"] }
minicbor-derive = "0.15.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
svg = "0.17.0"
evm-rpc-canister-types = { path = "../../packages/evm-rpc-canister-types" }
ic-evm-utils = { path = "../../packages/ic-evm-utils" }
