[package]
name = "chain_fusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4.3"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic" }
ic-cdk.workspace = true
ic-cdk-timers = "0.7"
ic-stable-structures = "0.6.4"
minicbor = { version = "0.24.0", features = ["alloc", "derive"] }
minicbor-derive = "0.15.0"
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
evm-rpc-canister-types.workspace = true
ic-evm-utils.workspace = true
ethers-core.workspace = true
